# box86js

./: CMakeLists.txt  bundle_box86_html.sh  rebuild_wrappers.py
docs/: 2048.html  box86.html  readme.md  tetris.html
src/: library_list.h  main.c
src/browser/: box86.html  browser.c  override.h
